--- a/src/app/dashboard/console/console.component.html
+++ b/src/app/dashboard/console/console.component.html
@@ -1,4 +1,4 @@
-<p>console works!</p>
+<h2>Web Console</h2>
 
 <p>
     Notice that the configured builder for the project is different from the default builder for app projects. This
