--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
 <cx-mat-layout [navigationItems]="menus">
+    <cx-mat-menu-top>
+        <button>Home</button>
+        <button>About Us</button>
+    </cx-mat-menu-top>
     <router-outlet></router-outlet>
 </cx-mat-layout>
