--- a/src/app/dashboard/console/console.component.html
+++ b/src/app/dashboard/console/console.component.html
@@ -3,7 +3,7 @@
 <p>
     Notice that the configured builder for the project is different from the default builder for app projects. This
     builder, among other things, ensures that the library is always built with the AOT compiler, without the need to
-    specify the --prod flag.
+    specify the <code>--prod</code> flag.
 
     To make library code reusable you must define a public API for it. This "user layer" defines what is available to
     consumers of your library. A user of your library should be able to access public functionality (such as NgModules,
