--- a/projects/cyazyx/cx-mat-layout/src/lib/components/cx-mat-layout.component.html
+++ b/projects/cyazyx/cx-mat-layout/src/lib/components/cx-mat-layout.component.html
@@ -1,14 +1,14 @@
 <!-- User can put back to top link above everything -->
 
 <!-- Progress bar at the top -->
-<div *ngIf="isLoading" class="progress-bar-container">
-    <mat-progress-bar mode="indeterminate" color="warn"></mat-progress-bar>
+<div *ngIf="layoutService.isLoadingContent.asObservable() | async" class="progress-bar-container">
+    <mat-progress-bar mode="indeterminate" color="{{topProgressBarColor}}"></mat-progress-bar>
 </div>
 
 <!-- Whether to display the navbar -->
 <mat-toolbar *ngIf="showTopNav" color="{{topnavColor}}" class="no-print {{topnavPosition}}">
     <mat-toolbar-row>
-        <button mat-button class="hamburger" [class.starting]="isLoading" (click)="sidenav.toggle()" title="{{sidenavToggleTitle}}">
+        <button mat-button class="hamburger" (click)="sidenav.toggle()" title="{{sidenavToggleTitle}}">
             <mat-icon>menu</mat-icon>
         </button>
         <!-- Menu Items loaded here -->
@@ -19,10 +19,14 @@
 <!-- Sidenav Container & Content -->
 <mat-sidenav-container class="sidenav-container" role="main">
 
-    <mat-sidenav [ngClass]="{'collapsed': !isSideBySide}" #sidenav class="sidenav {{sidenavBgColorClass}}" [mode]="mode"
-        [opened]="isOpened" (openedChange)="updateHostClasses()" color="primary">
+    <mat-sidenav [ngClass]="{'collapsed': !isSideBySide}" #sidenav class="sidenav" [mode]="mode" [opened]="isOpened"
+        (openedChange)="updateHostClasses()" color="primary">
         <!-- Main menu -->
-        <cx-mat-menu [navigationItems]="navigationItems" [fullWidth]="isSideBySide"></cx-mat-menu>
+        <cx-mat-menu *ngIf="navigationItems" [navigationItems]="navigationItems" [fullWidth]="isSideBySide">
+        </cx-mat-menu>
+        <div *ngIf="!navigationItems" class="navigation-loader">
+            <mat-spinner></mat-spinner>
+        </div>
         <!-- Other footer components to be displayed below menus-->
         <div class="sidenav-bottom-content">
             <ng-content select="[role=menu-content]"></ng-content>
