--- a/src/app/dashboard/settings/branches/locations/locations.component.html
+++ b/src/app/dashboard/settings/branches/locations/locations.component.html
@@ -1,4 +1,9 @@
 <h1>Locations</h1>
+
+<div fxLayout="row">
+    <a mat-raised-button color="accent" [routerLink]="'new'">NEW</a>
+</div>
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et fringilla orci, condimentum placerat urna. Sed nec nisi vitae erat ornare bibendum sit amet ut ipsum. Proin imperdiet commodo magna ut posuere. Etiam faucibus sapien a enim placerat pulvinar. Phasellus dictum arcu nec mi dictum aliquet. Integer elementum tortor est, vitae malesuada lectus sagittis id. Vestibulum eget porttitor purus. Mauris sit amet nisi feugiat, congue purus eget, vulputate dolor. Proin nec cursus lectus, nec dignissim velit. In hac habitasse platea dictumst. Praesent cursus, lorem nec consequat hendrerit, metus nunc blandit eros, eu aliquam mauris quam vel ligula. Aliquam euismod metus est, quis vehicula metus facilisis ut.
 
 Ut scelerisque volutpat magna nec accumsan. Ut ac ullamcorper sem. Aenean finibus quis nisi a consectetur. Integer sed faucibus ipsum. Nunc non dui viverra, gravida orci eu, posuere enim. Fusce at bibendum augue. Duis et orci velit. In eu nisi leo. Phasellus condimentum felis id justo dictum cursus. Ut lacinia posuere elit porttitor hendrerit. Donec quam nisl, faucibus nec sollicitudin nec, interdum id sapien. Suspendisse convallis quis arcu in tincidunt. Praesent volutpat pellentesque velit.
