Updated README lint issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,15 @@
 // Theme
 @import './themes/themes.scss';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 cx-mat-menu-top {
     display: flex;
