--- a/src/themes/themes.scss
+++ b/src/themes/themes.scss
@@ -1,24 +1,25 @@
 // Core theme file
+@use '~@angular/material' as mat;
 @import '~@angular/material/theming';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // **Be sure that you only ever include this mixin once!**
-@include mat-core();
+@include mat.core();
 
 // Define the default theme (same as the example above).
-$candy-app-primary: mat-palette($mat-indigo);
-$candy-app-accent: mat-palette($mat-pink, A200, A100, A400);
-$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
+$candy-app-primary: mat.define-palette(mat.$indigo-palette);
+$candy-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$candy-app-theme: mat.define-light-theme($candy-app-primary, $candy-app-accent);
 
 // Tied to body
 // Start with theme-* to dynamically locate the class
 body.theme-default {
-    @include angular-material-theme($candy-app-theme);
+    @include mat.all-component-themes($candy-app-theme);
 }
 
-$candy-app-theme-dark: mat-dark-theme($candy-app-primary, $candy-app-accent);
+$candy-app-theme-dark: mat.define-dark-theme($candy-app-primary, $candy-app-accent);
 
 body.theme-default-dark {
-    @include angular-material-theme($candy-app-theme-dark);
+    @include mat.all-component-themes($candy-app-theme-dark);
 }
